Fixing saveAs
directory is now created